IMPORTANT: This commit contains a lot of changes! - Introduce compose and kotlin dependencies. (this lead to a lot of the other changes) - Compile sdk 35 -> 36 - Target sdk 33 -> 36 (needs a lot of fixing still)   - Foreground service type   - Targeting android 15 enables and 16 forces edge-to-edge - fix, deal with the design later - Min sdk 21 -> 23 (android 6) - Java 21 (supposedly?) - Added currently unused Kotlin files and directories, deal with it later - Increment version: 2.0.10.4 (4403)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -781,5 +781,8 @@
     <string name="require_notification_permission_desc">Required to show notifications regarding new device connections, folder sharing requests, etc.</string>
     <string name="notification_permission_title">Notification permission</string>
     <string name="enable_notification_permission">Enable Notification Permission</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_test">Test</string>
 
 </resources>
