--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -221,7 +221,7 @@
     <string name="run_in_flight_mode_summary">Aktivera om din enhet har problem med att upptäcka manuella Wi-Fi-anslutningar under flygläge.</string>
     <string name="service_settings_title">Tjänstinställning</string>
     <string name="service_settings_summary">Kör Syncthing som en tjänst. Lägger till ett ihållande meddelande för att förhindra att den avslutas av Android. Om du kryssar i det här alternativet startas Syncthing vid uppstart av operativsystemet.</string>
-    <string name="run_as_background_service">Starta tjänsten automatiskt vid uppstart</string>
+    <string name="start_service_on_boot">Starta tjänsten automatiskt vid uppstart</string>
     <!--Preferences - Behaviour-->
     <string name="advanced_folder_picker">Använd avancerad mappväljare</string>
     <string name="advanced_folder_picker_summary">Välj någon mapp på enheten för synkronisering</string>
