--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -220,7 +220,7 @@
     <string name="run_in_flight_mode_summary">如果您的设备在飞行模式下检测手动 Wi-Fi 连接时出现问题，请启用。</string>
     <string name="service_settings_title">服务设置</string>
     <string name="service_settings_summary">将 Syncthing 作为服务运行，添加持久通知以防止 Android 终止。勾选此选项将在操作系统启动时启动 Syncthing。</string>
-    <string name="run_as_background_service">开机自动启动服务</string>
+    <string name="start_service_on_boot">开机自动启动服务</string>
     <!--Preferences - Behaviour-->
     <string name="advanced_folder_picker">使用高级文件夹选择器</string>
     <string name="advanced_folder_picker_summary">可以选择设备上任何文件夹</string>
