--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -220,7 +220,7 @@
     <string name="run_in_flight_mode_summary">如果您的設備在飛行模式下無法檢測到手動 Wi-Fi 連接，請啟用。</string>
     <string name="service_settings_title">服務設定</string>
     <string name="service_settings_summary">將 Syncthing 作為服務運行。添加持久通知以防止其被 Android 終止。選中此選項會在操作系統啟動時啟動 Syncthing。</string>
-    <string name="run_as_background_service">開機時自動執行服務</string>
+    <string name="start_service_on_boot">開機時自動執行服務</string>
     <!--Preferences - Behaviour-->
     <string name="advanced_folder_picker">使用進階的資料夾選擇器</string>
     <string name="advanced_folder_picker_summary">選擇在裝置上的同步資料夾</string>
